# fr-service

./: .gitignore  Cargo.toml  README.md  build.rs  config-exhibition-2024.yaml  config.yaml  readme.md
.github/workflows/: coverage.sh  coverage.yaml  markdownlint.yaml  release_deb_package.yaml  test.yaml
assets/: retain_points.json
assets/cache/: cache.json
design/: .~lock.functions.ods#  functions.ods  point-naming-schema.odg
logs/: clear.py
service/: cma-server.service
sql/: sql.md
src/: main copy 2.rs  main copy.rs  main.rs  main_.rs  main__.rs  task_test.rs  task_test.rs_  task_test.yaml  task_test_.yaml
src/conf/: api_client_config.rs  cache_service_config.rs  conf_duration.rs  conf_keywd.rs  conf_subscribe.rs  conf_tree.rs  diag_keywd.rs  fn_conf_keywd.rs  fn_conf_kind.rs  fn_config.rs  fn_point_config.rs  history_config.rs  metric_config.rs  mod.rs  multi_queue_config.rs  point_config.rs  service_config.rs  task_config.rs  tcp_client_config.rs  tcp_server_config.rs
src/conf/app/: app_config.rs
src/conf/fn_/: fn_conf_keywd.rs  fn_conf_kind.rs  fn_conf_options.rs  fn_config.rs  fn_point_config.rs  metric_config.rs  mod.rs
src/conf/jds_service_config/: jds_service_config.rs  mod.rs
src/conf/point_config/: mod.rs  name.rs  point_config.rs  point_config_address.rs  point_config_filters.rs  point_config_history.rs  point_config_type.rs  point_name.rs
src/conf/profinet_client_config/: _profinet_device_config.rs  keywd.rs  mod.rs  profinet_client_config.rs  profinet_db_config.rs  profinet_device_config.rs
src/conf/services/: mod.rs  services_config.rs
src/conf/slmp_client_config/: mod.rs  slmp_client_config.rs  slmp_db_config.rs
src/core/: mod.rs
src/core/debug/: debug_session.rs
src/core/nested_function/: fn_.rs  fn_conf_keywd.rs  fn_config.rs  fn_config__.rs  fn_config_type.rs  fn_count.rs  fn_in.rs  fn_reset.rs  fn_timer.rs  fn_trip.rs  metric_config.rs  mod.rs  nested_function.rs
src/core/state/: switch_state.rs
src/core_/: mod.rs
src/core_/aprox_eq/: aprox_eq.rs
src/core_/auth/: mod.rs
src/core_/cli/: cli.rs
src/core_/conf/: api_client_config.rs  conf_duration.rs  conf_keywd.rs  conf_tree.rs  fn_conf_keywd.rs  fn_conf_kind.rs  fn_config.rs  fn_config_type.rs  metric_config.rs  mod.rs  task_config.rs
src/core_/constants/: constants.rs
src/core_/cot/: cot.rs  mod.rs
src/core_/debug/: debug_session.rs
src/services/: mod.rs  queue_name.rs  retain_point_id.rs  service.rs  service_template.rs  services copy.rs  services.rs
src/task/: mod.rs  task.rs  task_cycle.rs  task_stuff.rs
src/tcp/: jds_routes.rs  mod.rs  steam_read.rs  tcp_client_connect.rs  tcp_read_alive.rs  tcp_read_alive_mapped.rs  tcp_recv_alive.rs  tcp_send_alive.rs  tcp_socket.rs  tcp_socket_client_connect.rs  tcp_stream_write.rs  tcp_write_alive.rs
src/tests/: mod.rs
(+574 files in other folders)
