[package]
name = "fr-service"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "^0.11"

testing = { git = "https://github.com/a-givertzman/rust-testing.git", version = "0.0.1" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", version = "0.0.1" }
api-tools = { git = "https://github.com/a-givertzman/rust-api-tools.git", version = "0.0.1" }

# num = "^0.4"
# derive-new = "^0.5"

serde = { version = "^1.0", features = ["derive"] }
erased-serde = "^0.4"
serde_yaml = "^0.9"
serde_json = "^1.0"
typetag = "^0.2"

regex = "^1.10"

rand = "^0.8"

chrono = "^0.4"

indexmap = "^2.2"

# snap7 = "^0.0"
snap7-sys = "^0.1"
libc = "^0.2"
libloading = "^0.8"
bindgen = "^0.69"
once_cell = "^1.19"



# [[bin]]
# name = "task_test"
# path = "src/task_test.rs"
