[package]
name = "cma-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "^0.11"

testing = { git = "https://github.com/a-givertzman/rust-testing.git" }
# testing = { git = "https://github.com/a-givertzman/rust-testing.git", tag = "0.1.1" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", tag = "0.0.1" }
api-tools = { git = "https://github.com/a-givertzman/rust-api-tools.git", tag = "0.0.6" }

# num = "^0.4"
# derive-new = "^0.5"

serde = { version = "^1.0", features = ["derive"] }
erased-serde = "^0.4"
serde_yaml = "^0.9"
serde_json = "^1.0"
typetag = "^0.2"

regex = "^1.10"

rand = "^0.8"

chrono = "^0.4"

linked-hash-map = "^0.5"
indexmap = "^2.2"
hashers = "^1.0"

# snap7 = "^0.0"
snap7-sys = "^0.1"
libc = "^0.2"
libloading = "^0.8"
bindgen = "^0.69"
once_cell = "^1.19"

concat-string = "^1.0"
const_format = "^0.2"

signal-hook = "^0.3"

lexical = "^6.1"

strum = "0.26.2"
strum_macros = "0.26.2"

clap = { version = "^4.5", features = ["derive"] }

# [[bin]]
# name = "task_test"
# path = "src/task_test.rs"
